--- a/hw_2/homework_2.ipynb
+++ b/hw_2/homework_2.ipynb
@@ -176,7 +176,7 @@
     "        self.engine = engine\n",
     "\n",
     "    def set_engine(self, engine: Engine):\n",
-    "        self.engine = engine\n"
+    "        self.engine = None\n"
    ]
   },
   {
