--- a/hw_2/homework_2.ipynb
+++ b/hw_2/homework_2.ipynb
@@ -173,10 +173,10 @@
     "class Car(Vehicle):\n",
     "    def __init__(self, engine: Engine):\n",
     "        super().__init__()\n",
-    "        self.engine = engine\n",
+    "        self.engine = None\n",
     "\n",
     "    def set_engine(self, engine: Engine):\n",
-    "        self.engine = None\n"
+    "        self.engine = engine\n"
    ]
   },
   {
